--- a/_config.yml
+++ b/_config.yml
@@ -291,7 +291,7 @@ defaults:
       share: true
       related: true
       mathjax: true
-      sidebar_main: false 
+      sidebar_main: true 
 
   # _pages
   - scope:
