--- a/.gitignore
+++ b/.gitignore
@@ -26,7 +26,7 @@ codekit-config.json
 .jekyll-metadata
 .sass-cache
 _asset_bundler_cache
-_site
+_site/*
 
 
 # Byte-compiled / optimized / DLL files
